--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,24 @@
+aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.9
+aiosignal==1.3.2
 anyio==4.9.0
 attrs==25.3.0
 certifi==2025.4.26
 charset-normalizer==3.4.2
 dotenv==0.9.9
+frozenlist==1.6.2
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
+multidict==6.4.4
 numpy==2.2.6
 opencv-python==4.11.0.86
 outcome==1.3.0.post0
 packaging==25.0
 pillow==11.2.1
+propcache==0.3.1
 pydub==0.25.1
 PySocks==1.7.1
 python-dotenv==1.1.0
@@ -27,3 +34,4 @@ urllib3==2.4.0
 webdriver-manager==4.0.2
 websocket-client==1.8.0
 wsproto==1.2.0
+yarl==1.20.0
